Fix about me skills spacing and about me text alignment

--- a/src/app/components/aboutme.module.css
+++ b/src/app/components/aboutme.module.css
@@ -28,11 +28,10 @@
     grid-column: 1;
 
     width: 100%;
-    height: 100%;
 
-    margin-left: 5vw;
-    padding-top: 10vh;
-    padding-right: 6vw;
+    margin: auto;
+    padding-left: 5vw;
+    padding-right: 5vw;
 
     font-size: 1.6vmax;
     color: var(--foreground);
@@ -53,7 +52,7 @@
     place-items: center;
     gap: 1vmin;
 
-    width: 80%;
+    width: 75%;
     height: 80%;
 }
 
@@ -72,12 +71,12 @@
     border-width: 0.2vmin;
     border-radius: 10px;
     
-    --size: 17vmin;
+    --size: 20vmin;
 }
 
 .skillImage {
-    width: calc(var(--size)/3);
-    height: calc(var(--size)/3);
+    width: calc(var(--size)/2.75);
+    height: calc(var(--size)/2.75);
 
     margin-top: 0.5vmax;
 }
